change routing - collapse lock creation
